--- a/avaino/MainWindow.xaml
+++ b/avaino/MainWindow.xaml
@@ -5,15 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:avaino"
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
+        xmlns:sn="http://scintillanet.codeplex.com"
         mc:Ignorable="d"
         Title="Avaino v1.0" Height="450" Width="800">
     <Grid>
-        <avalonEdit:TextEditor
-            Grid.Row="1"
-			Name="textEditor"
-			FontFamily="Consolas"
-			FontSize="10pt"
-			SyntaxHighlighting="C++"
-            ShowLineNumbers="True"/>
+        <sn:ScintillaWPF Name="Scintilla" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderBrush="Transparent"/>
     </Grid>
 </Window>
