--- a/avaino/MainWindow.xaml
+++ b/avaino/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
         xmlns:sn="http://scintillanet.codeplex.com"
         mc:Ignorable="d"
-        Title="Avaino v1.0" Height="450" Width="800">
+        Title="Avaino v1.0" Width="1024" Height="768">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
